# AI-Agents

./: .gitignore  README.md
1-llm-api/: README.md
1-llm-api/1_openai/10_react_agent/: README.md  main.py  pyproject.toml
1-llm-api/1_openai/3_chat_history/: main-responses-api.py
1-llm-api/1_openai/4_tools/: main-finished.py  main-start.py  pyproject.toml
1-llm-api/1_openai/5_generate_image/: main.py  pyproject.toml
1-llm-api/2_anthropic/10_react_agent/: README.md  main.py  pyproject.toml
1-llm-api/3_ollama/0_embedding/: main.py  pyproject.toml
1-llm-api/3_ollama/10_react_agent/: README.md  main.py  pyproject.toml
1-llm-api/3_ollama/1_basics/: main-custom-client.py  main-http-chat.py
1-llm-api/4_huggingface/10_react_agent/: README.md  main.py  pyproject.toml
1-llm-api/4_huggingface/1_basics/: main-hf-hub.py  main-http-chat-completion-api.py  main-openai.py
1-llm-api/4_huggingface/2_multimodal/: main.py
1-llm-api/4_huggingface/3_chat_history/: main-no-history.py  main-with-history.py
1-llm-api/4_huggingface/4_tools/: main-finished.py  main-start.py
1-llm-api/5_gemini/10_react_agent/: README.md  main.py  pyproject.toml
1-llm-api/5_gemini/1_basics/: main-http.py  main.py  pyproject.toml
1-llm-api/5_gemini/2_multimodal/: main.py  pyproject.toml
1-llm-api/5_gemini/4_tools/: main-start.py  pyproject.toml
1-llm-api/5_gemini/5_generate_image/: main_gemini.py  main_imagen.py  pyproject.toml
1-llm-api/6_grok/10_react_agent/: README.md  main.py  pyproject.toml
1-llm-api/6_grok/1_basics/: main-http.py  main.py  pyproject.toml
1-llm-api/6_grok/2_multimodal/: main.py
1-llm-api/6_grok/4_tools/: main.py
1-llm-api/homework/: main.py
2-databases/2_ecommerce/: README.md  db_schema.md  docker-compose.yml  recommendations.md
2-databases/2_ecommerce/1_MSSQL/: README.md  pyproject.toml
2-databases/2_ecommerce/1_MSSQL/api/: main.py
2-databases/2_ecommerce/1_MSSQL/scripts/: populate_data.py
2-databases/2_ecommerce/2_MongoDB/: README.md  pyproject.toml
2-databases/2_ecommerce/2_MongoDB/api/: main.py
2-databases/2_ecommerce/2_MongoDB/scripts/: populate_data.py
2-databases/2_ecommerce/3_Elasticsearch/: README.md  pyproject.toml
2-databases/2_ecommerce/3_Elasticsearch/api/: main.py
2-databases/2_ecommerce/3_Elasticsearch/scripts/: populate_data.py
2-databases/2_ecommerce/4_Qdrant/: README.md  pyproject.toml
2-databases/2_ecommerce/4_Qdrant/api/: main.py
2-databases/2_ecommerce/4_Qdrant/scripts/: populate_data.py
2-databases/2_ecommerce/shared_data/: data_generator.py  metadata.json  orders.json  products.json  products_backup.json  products_backup2.json  pyproject.toml  reviews.json  users.json
2-databases/2_ecommerce/shared_data/generators/: __init__.py  base_generator.py  content_generator.py  image_generator.py  order_generator.py  product_data.py  product_generator.py  review_generator.py  user_generator.py
2-databases/3_db_as_tool/: .env.example  README.md  main.py  pyproject.toml
(+74 files in other folders)
