[project]
name = "react-agent"
version = "0.1.0"
description = "A ReAct (Reason and Act) AI agent that handles multiple tool calls"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.11.4",
    "ollama>=0.4.7",
    "openai>=1.66.3",
    "python-dotenv>=1.0.1",
    "yfinance>=0.2.54",
    "pymongo>=4.0.0",
    "requests>=2.31.0",
    "pyodbc>=5.0.0",
    "elasticsearch>=8.0.0,<9.0.0",
    "qdrant-client>=1.7.0",
    "minio>=7.2.0",
    "sqlalchemy>=2.0.0",
]
