[project]
name = "ecommerce-mongodb"
version = "0.1.0"
description = "E-commerce MongoDB database service"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pymongo>=4.6.0",
    "motor>=3.3.0",
    "pydantic>=2.5.0",
    "faker>=22.0.0",
    "python-dotenv>=1.0.0",
    "beanie>=1.24.0",
    "httpx>=0.25.0",
]

[tool.uv]
dev-dependencies = []
