[project]
name = "ecommerce-qdrant"
version = "0.1.0"
description = "Qdrant vector database service for e-commerce recommendations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]
